# skeg-rigging

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/skeg-rigging/: Cargo.toml
crates/skeg-rigging-ingest/: Cargo.toml
crates/skeg-rigging-ingest/src/: chunk.rs  embed.rs  lib.rs
crates/skeg-rigging-ingest/tests/: ingest.rs
crates/skeg-rigging-skeg/: Cargo.toml
crates/skeg-rigging-skeg/benches/: snapshot_restore.rs  tenant_query.rs
crates/skeg-rigging-skeg/src/: lib.rs  meta_sidecar.rs  tenant.rs
crates/skeg-rigging-skeg/tests/: accounting.rs  events.rs  gates.rs  lifecycle.rs  roundtrip_tenant.rs
crates/skeg-rigging/src/: accounting.rs  asyncs.rs  error.rs  events.rs  filter.rs  ids.rs  iter.rs  lib.rs  lifecycle.rs  mock.rs  readonly.rs  write.rs
crates/skeg-rigging/tests/: dummy_impl.rs
