[package]
name = "skeg-rigging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Public extension points for skeg plugins: stable trait-based contracts."
readme = "../../README.md"
keywords = ["skeg", "plugin", "extension", "vector", "kv-store"]
categories = ["database", "api-bindings"]

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
skeg-hull = { workspace = true }

[features]
default = []
# In-memory `MockTenant` for plugin authors who want to test against
# the rigging surface without pulling in a real engine.
mock = []

[lints]
workspace = true
